tests/derivation/core/norec part noext 003/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Usupported applications to a non-concrete type `ty`

DerivedGen:1
 12 | XShow : Show X
 13 | XShow = %runElab derive
 14 | 
 15 | checkedGen : Fuel -> Gen MaybeEmpty X
 16 | checkedGen = deriveGen
                   ^^^^^^^^^

